# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.777 2008/10/24 11:23:03 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2008/10/24) Added StopAfterMatch attribute on postmaster filter (DB and
    config backend).
 - (2008/10/23) First version of improved ticket overview modus, added S/M/L
    options.
 - (2008/10/23) Added ticket change time option to agent ticket search.
 - (2008/10/14) Added COUNT as result option in TicketSearch() of
    Kernel::System::Ticket to increase performance of count lookups.
 - (2008/10/14) Added new tables for "RFC 2822 conform" and Service/SLA
    preferences feature (use scripts/DBUpdate-to-2.4.*.sql for upgrading).
 - (2008/10/14) Added RFC 2822 conform In-Reply-To and References header
    support for outgoing emails (Threading).
 - (2008/10/02) Added script to move stored attachments from one backend to
    other backend, e. g. DB -> FS (bin/otrs.ArticleStorageSwitch.pl).
 - (2008/10/02) Added service and sla preferences feature, like already exising
    user, customer and queue preferences. Can be extended by config settings.
 - (2008/10/02) Improved package manager to get info about documentation
    availabe in online repository packages.

2.3.4 (2008/??/??)
 - (2008/10/20) Fixed bug# 3391 - Filter out hazardous characters from redirects.
 - (2008/10/16) Fixed bug# 2415 - Wrong info after editing salutation.
 - (2008/10/15) Fixed bug# 3379 - Documentation of packages got not shown in
    admin package manager.
 - (2008/10/15) Updated Chinese translation, thanks to Never Min!
 - (2008/10/13) Fixed bug# 3373 - Postmaster match filter is losing [***] on
    second time.
 - (2008/10/13) Fixed bug# 3367 - Escalation of first response gets not changed