@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.777 2008/10/24 11:23:03 martin Exp $
+# $Id: CHANGES,v 1.778 2008/10/28 14:50:30 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,9 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/10/28) Implemented RFE (bug# 1006): Added ticket change time to
+    TicketGet and ArticleGet output. As a result, parameter 'Changed' is now
+    usable as field in CSV search output as ticket change time.
  - (2008/10/24) Added StopAfterMatch attribute on postmaster filter (DB and
     config backend).
  - (2008/10/23) First version of improved ticket overview modus, added S/M/L
